# programming-engineer-website

./: .gitignore  mkdocs.yml  pyproject.toml
.digitalocean/: orca-app.yaml
.github/workflows/: Build mkdocs.yaml
.obsidian/: workspace.json
.obsidian/plugins/obsidian-minimal-settings/: data.json
config/en/: mkdocs.yml
config/nl/: mkdocs.yml
docs/: contact.md  hobby.md  index.md  procedure.md  projects.md
docs/blog/: .authors.yml  Convention.md
docs/blog/posts/: __super()__ considered a case for dependency injection.md  __super()__ considers a case for dependency injection.md  excel-development-overview.md
docs/blog_concept/: Locale and culture settings in Office Scripts.md  python-project-setup-layout.md
docs/nl/: index.md  technologies.md
site/: 404.html  index.html  sitemap.xml
site/blog/: index.html
site/blog/Convention/: index.html
site/blog/__super__-considered-a-case-for-dependency-injection/: index.html
site/blog/archive/2023/: index.html
site/blog/overview-of-excel-development-tools/: index.html
site/blog_concept/Locale and culture settings in Office Scripts/: index.html
site/blog_concept/python-project-setup-layout/: index.html
site/contact/: index.html
site/hobby/: index.html
site/instructies/: index.html
site/procedure/: index.html
site/projects/: index.html
site/stylesheets/: extra.css
